@@ -44,24 +44,24 @@
 class OlaConfigurator;
 
 
-/*
+/**
  * Inherit from this and implement HandleResponse()
  */
 class OlaConfigurator {
  public:
-    /*
+    /**
      * @param device_id the device id to configure
      * @param plugin_id the expected plugin id for this device
      */
-    OlaConfigurator(unsigned int device_id, ola::ola_plugin_id plugin_id):
-      m_alias(device_id),
-      m_plugin_id(plugin_id),
-      m_client_wrapper(NULL),
-      m_client(NULL),
-      m_ss(NULL) {}
+    OlaConfigurator(unsigned int device_id, ola::ola_plugin_id plugin_id)
+        : m_alias(device_id),
+          m_plugin_id(plugin_id),
+          m_client_wrapper(NULL),
+          m_client(NULL),
+          m_ss(NULL) {}
     virtual ~OlaConfigurator();
 
-    /*
+    /**
      * Setup the configurator
      */
     bool Setup();
