@@ -8,7 +8,7 @@ ola_e131 \- Configure E1.31 devices managed by OLA.
 .B ola_e131
 is used to configure E1.31 devices managed by OLA.
 .SH OPTIONS
-.IP "-d, --dev <device>"
+.IP "-d, --device <device>"
 Id of the device to control.
 .IP "-h, --help"
 Display the help message
