@@ -17,6 +17,8 @@ x/y/2014 ola-0.9.2
    * all other plugins, especially device-based ones (USB, serial, SPI)
    * Java bindings
  * Use the PID (process ID) and current time to init the random seed - #227
+ * Standardise some flags, using --device consistently. This affects
+   ola_artnet, ola_e131 and ola_usbpro
 
  Bugs:
  * Don't build ola_protoc if --with-ola-protoc= is provided.
